Use String.isBlank()